fix: travis.yml paths, removed: SnTrace_Operation_Nested assert

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: csharp
 mono: none
 dotnet: 2.1.300
 install:
- - dotnet restore
+ - dotnet restore ./src
 script:
- - dotnet test SenseNet.Tools.Tests /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutputDirectory=coverage
+ - dotnet test ./src/SenseNet.Tools.Tests /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutputDirectory=coverage
 after_success:
  - bash <(curl -s https://codecov.io/bash)
 notifications:
